fixed overflow on shop section

--- a/app/assets/stylesheets/frontend/devise/_login.scss
+++ b/app/assets/stylesheets/frontend/devise/_login.scss
@@ -59,6 +59,7 @@
   margin: 5px;
   width: 100%;
   color: white;
+  background-color: #0681e4 !important;
 }
 .errors{
   color: red;
