--- a/app/assets/stylesheets/pages/partials/_products.scss
+++ b/app/assets/stylesheets/pages/partials/_products.scss
@@ -11,6 +11,7 @@ body::-webkit-scrollbar-thumb {
   width: 100vw;
   height: 100vh;
   display: flex;
+  overflow: hidden;
   align-items: stretch;
   background: purple;
   position: relative;
